--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,21 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+        release {
+            // Aquí creas tu KeyStore para firmar la app Release
+            storeFile file('release.keystore') // Cambia por la ruta de tu keystore
+            storePassword '123456'              // Cambia por tu contraseña
+            keyAlias 'guiaViajes'               // Cambia por tu alias
+            keyPassword '123456'                // Cambia por tu contraseña
+        }
+    }
+
     namespace 'com.grupo12.guiaviajespersonalizada'
     compileSdk 34
 
@@ -18,9 +33,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -41,65 +60,58 @@ android {
 
 dependencies {
 
-    // Core Android dependencies
+    // 🧱 Core Android
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    // Navigation components
+    // 🧭 Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
 
-    // Lifecycle components
+    // ♻️ Lifecycle (ViewModel, LiveData, etc.)
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
 
-    // RecyclerView
+    // 🗂️ UI Components
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-
-    // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    // Image loading library
+    // 🖼️ Glide (carga de imágenes desde URLs)
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    implementation libs.androidx.annotation
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
-    // WebView
+    // 🌐 WebView
     implementation 'androidx.webkit:webkit:1.8.0'
 
-    // Video player (ExoPlayer)
+    // 🎬 ExoPlayer (videos)
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
 
-    // Networking
+    // 🌍 Networking - Retrofit + Gson + OkHttp (para APIs REST)
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
 
-    // JSON parsing
+    // 🔍 JSON parsing
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    // Coroutines
+    // ⚙️ Coroutines (para llamadas asíncronas)
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
-    // Fragment
+    // 🧩 Fragment / Activity extensiones
     implementation 'androidx.fragment:fragment-ktx:1.6.2'
-
-    // Activity
     implementation 'androidx.activity:activity-ktx:1.8.1'
 
-    // Testing dependencies
+    // 🧪 Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    // UI Testing
     androidTestImplementation 'androidx.navigation:navigation-testing:2.7.5'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
 
-    // Debug dependencies
+    // 🐞 Debug
     debugImplementation 'androidx.fragment:fragment-testing:1.6.2'
 }
